--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "hoek": "^4.1.0",
-    "serialport": "^5.0.0-beta3"
+    "serialport": "^7.0.0"
   },
   "devDependencies": {
     "mocha": "^3.2.0"
